# SwiftAnnotate

./: .gitignore  404.html  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
docs/: mkdocs.yml
docs/src/: image.md  index.md
docs/src/stylesheets/: extra.css
image/: index.html
search/: search_index.json
swiftannotate/: constants.py
swiftannotate/image/: __init__.py  base.py  captioning.py  classification.py  object_detection.py  utils.py
swiftannotate/image/captioning/: __init__.py  auto.py  gemini.py  ollama.py  openai.py  qwen.py
swiftannotate/image/classification/: __init__.py  gemini.py  ollama.py  openai.py  qwen.py
swiftannotate/image/object_detection/: __init__.py  owlv2.py  yoloworld.py
tests/: test.py  test_image_captioning.py  test_image_classification.py  test_object_detection.py
text/: index.html
video/: index.html
